# agent-team

./: .gitignore  .goreleaser.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  dockerfile_test.go  go.mod  go.sum
.agent_team/: agents  config.toml  instances.toml  skills
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  container.yml  project-status.yml
cli/: README.md  pyproject.toml
cli/src/agent_squad/commands/: init.py
cli/src/agent_team/: __main__.py  cli.py
cli/src/agent_team/commands/: __init__.py  add.py  doctor.py  init.py  run.py  spawn.py
cmd/agent-teamd/: main.go
docs/: experiment.md  index.md
docs/.vitepress/: config.mts
docs/authoring/: agents-and-skills.md  templates.md  topology.md
docs/contributing/: roadmap.md
docs/guide/: board-control-plane.md  concepts.md  index.md  observability-and-recovery.md  quickstart.md
docs/reference/: cli.generated.md  cli.md  (+2 more)
documentation/: architecture.md  codex-runtime-doc-validation-2026-06-22.md  codex-runtime-feature-matrix-2026-06-22.md  distributed-resources.md  feedback-channel.md  gh398-a-evidence-manifest.md  gh405-frontend-soak-budgets-evidence.md  manager-handover.md  model-economy.md  open-questions.md  operating-model.md  orchestrator.md  product-verify.md  recoverable-managers.md  resource-constraints.md  roadmap.md  runtime-contract.md  security-model.md  templates.md  topology.md  vision.md
scripts/: build.sh
template/: config.toml.example  instances.toml  instances.toml.tmpl  template.toml
(+370 files in other folders)
