[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-team"
version = "0.1.0"
description = "CLI for vendoring and managing an agent-team — ticket-manager + manager + worker agents and supporting skills — into any repo."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "James Audretsch", email = "james.audretsch@phoebe.ai" }]
dependencies = [
  "typer>=0.12,<1.0",
]

[project.scripts]
agent-team = "agent_team.cli:main"

[project.urls]
Homepage = "https://github.com/jamesaud/agent-team"
Repository = "https://github.com/jamesaud/agent-team"

[tool.hatch.build]
include = [
  "src/agent_team/**/*.py",
  "src/agent_team/template/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_team"]
